--- a/config.conf
+++ b/config.conf
@@ -1,9 +1,16 @@
 {
     "paths":{
 
-        "pypy_home":"/home/admalledd/dev/pypy/builds/pypy-3k-shared-64bit-2014-4-14/bin/libpypy-c.so",
+        "pypy_home":"/home/admalledd/dev/pypy/builds/pypy-py3k-64bit-2014-10-31/bin/libpypy-c.so",
         "java_class_home":"/home/admalledd/Documents/code/c/embsanity/data",
-        "data_dir":"/home/admalledd/Documents/code/c/embsanity/"
+        "data_dir":"/home/admalledd/Documents/code/c/embsanity/",
+        "monowrapper":{
+            "exe":"data/mono_interop.exe",
+            "namespace":"embedsanity",
+            "class":"mono_interop",
+            "callback":"StartUp"
+        }
+
     }
 
 }
